[gd_scene load_steps=3 format=3 uid="uid://ctxg1k4vu4tjh"]

[ext_resource type="Script" uid="uid://ndbwfr86e818" path="res://scripts/guessing_scene.gd" id="1_bqe6p"]
[ext_resource type="Script" uid="uid://dtqjlgijpcouu" path="res://scripts/keypad_container.gd" id="2_hb83j"]

[node name="GuessingScene" type="Node2D"]
script = ExtResource("1_bqe6p")

[node name="NumLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -167.0
offset_right = 20.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "egg"
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -167.0
offset_right = 20.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "tine"
horizontal_alignment = 1

[node name="KeypadContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -68.0
offset_right = 47.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
columns = 3
script = ExtResource("2_hb83j")

[connection signal="keypress" from="KeypadContainer" to="." method="_on_keypad_container_keypress"]
